2008-01-13  Tobias Burnus  <burnus@net-b.de>

PR fortran/34759
        * check.c (gfc_check_shape): Accept array ranges of
        assumed-size arrays.

2008-01-13  Tobias Burnus  <burnus@net-b.de>

        PR fortran/34759
        * gfortran.dg/assumed_size_refs_4.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@131511 138bc75d-0d04-0410-961f-82ee72b054a4